# build-scripts

./: .gitignore  README.md  build_assimp.bat  build_boost.bat  build_bzip2.bat  build_ceres.bat  build_flann.bat  build_freetype.bat  build_graphicsmagick.bat  build_gtest.bat  build_icu.bat  build_jpeg.bat  build_lcms2.bat  build_nlopt.bat  build_opencv.bat  build_openjpeg.bat  build_openmvg.bat  build_openscenegraph.bat  build_openssl.bat  build_pcl.bat  build_png.bat  build_qhull.bat  build_suitesparse.bat  build_tiff.bat  build_webp.bat  build_wxwidgets.bat  build_xz.bat  build_zlib.bat  check_tools.bat  install_eigen.bat  libs_versions.bat  open_bash.bat  open_cmd.bat  set_paths.bat  set_vars.bat  todo.txt
cccl/: cccl-wx
src/: readme.txt
support/jpeg/: CMakeLists.txt  jconfig.h.cmake
support/jpeg/cmake/: dist.cmake
support/nlopt/: CMakeLists.txt
test/cccl/: zlibtest.cpp
test/eigen_boost/: build_vstudio.bat
test/eigen_boost/src/: CMakeLists.txt  eigen_boost.cpp
test/wxwidgets/: build.bat  build_vstudio.bat
test/wxwidgets/src/: CMakeLists.txt  wxcmaketestapp.cpp  wxcmaketestapp.h
utils/: fast_rmdir.bat
